--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         <div class="row">
 
           <!-- headliner -->
-          <div class="col-lg-6 col-md-6 col-sm-6" style="margin-top:50px; border:white 1px solid;">
-            <h1> HELLO! <br> I'M IRENE </h1>
+          <div class="col-lg-6 col-md-6 col-sm-6" style="margin-top:40px; border:white 1px solid;">
+            <h1> <em> Hey! I'm Irene </em> </h1>
             <!-- HEADER ROTATOR REMOVED STARTING HERE -->
             <h3 style="border:white 1px solid;"> 
             UX designer who loves streamlining task flows and designing seamless digital experiences that make content more accessible and navigable
@@ -152,37 +152,45 @@
           <!-- Chipotle  -->
           <div class="col-lg-12 portfolio-item" class="img-fluid">
             <a href="proj_chipotle.html" target="_blank">
-              <div class="image" >
-                <img src="assets/img/proj_chipotle/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
-                <div class="image_overlay">
-                    <!-- <div class="image_title"> REIMAGINING CHIPOTLE'S <br> ONLINE ORDERING EXPERIENCE </div> -->
+              <div class="image">
+                <img src="assets/img/proj_chipotle/cover.png" class="img-fluid" alt="">
+                <div class="zoom">
+                    <img src="assets/img/proj_chipotle/cover.png" class="img-fluid" alt="">
+                    <!--- <div class="image_title"> REIMAGINING CHIPOTLE'S <br> ONLINE ORDERING EXPERIENCE </div>
                     <div class="image_title"> CHIPOTLE </div>
-
-                    
                     <p class="image_description"> <em> Marketing, Visual Design, Mobile App Redesign  </em>
-                    </p>
-                </div>
+                    </p> -->
+                </div> 
               </div>
             </a>
+            <div class="container">
+              <div class="case_title"> <em> Chipotle  </em> </div>
+              <p class="case_descrip"> <em> Reimagining Chipotle's online ordering experience </em>
+            </div>
           </div>
 
 
 
+
           <!-- Content Design  -->
-          <div class="col-lg-12 portfolio-item" class="img-fluid">
+          <div class="col-lg-12 portfolio-item" class="img-fluid" style="margin-bottom:50px;">
             <a href="proj_thewashingtonpost.html" target="_blank">
               <div class="image" >
-                <img src="assets/img/proj_post/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
-                <div class="image_overlay">
+                <img src="assets/img/proj_post/cover.png" class="img-fluid" alt="">
+                <div class="zoom">
+                    <img src="assets/img/proj_post/cover.png" class="img-fluid" alt="">
                     <!-- <div class="image_title"> DRIVING MILLENNIAL ENGAGEMENT <br> FOR THE WASHINGTON POST </div> -->
-                     <div class="image_title"> THE WASHINGTON POST </div>
-
+                     <!-- <div class="image_title"> THE WASHINGTON POST </div> -->
                     <!-- <p class="image_description"> <em> Engaging the Next Generation </em> -->
-                    <p class="image_description"> <em> Content Strategy, Information Architecture, Web Design </em>
-                    </p>
+                    <!-- <p class="image_description"> <em> Content Strategy, Information Architecture, Web Design </em>
+                    </p> -->
                 </div>
               </div>
             </a>
+             <div class="container">
+              <div class="case_title"> <em> The Washington Post  </em> </div>
+              <p class="case_descrip"> <em> Engaging millennials and the next generation </em>
+            </div>
           </div>
 
 
@@ -190,16 +198,20 @@
           <div class="col-lg-12 portfolio-item" class="img-fluid">
             <a href="proj_balabangles.html" target="_blank">
               <div class="image" >
-                <img src="assets/img/proj_bala/cover2.png" style="border-radius:10px;" class="img-fluid" alt="">
-                <div class="image_overlay">
+                <img src="assets/img/proj_bala/cover2.png" class="img-fluid" alt="">
+                <div class="zoom">
+                    <img src="assets/img/proj_bala/cover2.png" class="img-fluid" alt="">
                     <!-- <div class="image_title"> ELEVATING BALA BANGLES' <br> PRODUCT DISCOVERY EXPERIENCE </div> -->
-                    <div class="image_title"> BALA BANGLES </div>
-
+                    <!-- <div class="image_title"> BALA BANGLES </div>
                     <p class="image_description"> <em> Content Strategy, Information Architecture, Web Design </em>
-                    </p>
+                    </p> -->
                 </div>
               </div>
             </a>
+              <div class="container">
+                <div class="case_title"> <em> Bala Bangles </em> </div>
+                <p class="case_descrip"> <em> Elevating the product search and discovery experience </em>
+              </div>
           </div>
 
 
@@ -207,14 +219,19 @@
           <div class="col-lg-12 portfolio-item" class="img-fluid">
             <a href="proj_pomolo.html">
               <div class="image" >
-                <img src="assets/img/portfolio/pomolo.png" style="border-radius:10px;" class="img-fluid" alt="">
-                <div class="image_overlay">
-                    <div class="image_title"> POMOLO </div>
+                <img src="assets/img/portfolio/pomolo.png" class="img-fluid" alt="">
+                <div class="zoom">
+                    <img src="assets/img/portfolio/pomolo.png" class="img-fluid" alt="">
+                    <!-- <div class="image_title"> POMOLO </div>
                     <p class="image_description"> <em> Concept Development, Mobile App Design </em>
-                    </p>
+                    </p> -->
                 </div>
               </div>
             </a>
+            <div class="container">
+              <div class="case_title"> <em> Pomolo </em> </div>
+              <p class="case_descrip"> <em> Boosting focus and concentration with Pomolo </em>
+            </div>
           </div>
 
       
