--- a/aboutme.html
+++ b/aboutme.html
@@ -53,15 +53,15 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between" style="margin-top:8px;">
 
-      <h1 class="logo"><a href="index.html">  IRENE LUE </a> </h1>
+      <h1 class="logo"><a href="index.html">  </a> </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="index.html#portfolio">PORTFOLIO</a></li>
+          <!-- <li><a href="index.html">HOME</a></li> -->
+          <li><a href="index.html#portfolio">HOME</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
           <li><a href="https://drive.google.com/file/d/1e1YjK2bktUEod1lXxS5KymU3pvoh2KEI/view?usp=sharing" target="_blank">RESUME</a></li>
           <!-- <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li> -->
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class ="about-paragraph2">
-                  Apart from design, I love leading an active lifestyle through strength training, running, and engaging in outdoor activities. I love music, connecting with people, and exploring new places through traveling.
+                  Apart from design, I love maintaining an active lifestyle through strength training, running by the beach, and engaging in outdoor activities with friends. My favorite pastimes are listening to music, traveling and exploring new places, and connecting with people.
                 </div>
 
                 <div class ="about-paragraph2">
