--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">  IRENE LUE </a> </h1>
+      <h1 class="logo"><a href="index.html">  </a> </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
-          <li><a href="index.html">HOME</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">PORTFOLIO</a></li>
+          <!-- <li><a href="index.html">HOME</a></li> -->
+          <li><a class="nav-link scrollto" href="#portfolio">HOME</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
           <li><a href="https://drive.google.com/file/d/1e1YjK2bktUEod1lXxS5KymU3pvoh2KEI/view?usp=sharing" target="_blank">RESUME</a></li>
           <!-- <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li> -->
@@ -116,12 +116,13 @@
         <h1 class="logo"><a href="index.html" title="IRENE LUE">  IRENE LUE </a> </h1>
         <div class="row">
 
+      
           <!-- headliner -->
           <div class="col-lg-6 col-md-6 col-sm-6" style="margin-top:40px; border:white 1px solid;">
-            <h1> <em> Hey! I'm Irene </em> </h1>
+            <h1> HEY THERE! 👋 </h1>
             <!-- HEADER ROTATOR REMOVED STARTING HERE -->
             <h3 style="border:white 1px solid;"> 
-            UX designer who loves streamlining task flows and designing seamless digital experiences that make content more accessible and navigable
+            I'm Irene, a UX designer who loves streamlining task flows and simplifying complex information ecosystems. 
             </h3>
 
             <div class="container" style="margin-left:0px; margin-top:20px;">
@@ -134,8 +135,8 @@
           </div>
 
           <!-- side image -->
-          <div class="col-lg-6 col-md-6 col-sm-6" style="border:white 1px solid; margin-top:120px;">
-            <img id="prof-pic" src="assets/img/insta/waikiki.jpg" class="img-fluid" alt="" style="margin:auto; width:80%; border-radius:400px;"> 
+          <div class="image-container" style="border:white 1px solid; border-radius:100%; width:50%; justify-content:left; text-align:left; margin-top:80px; margin-right:0px;">
+            <img id="prof-pic" src="assets/img/insta/waikiki.jpg" class="img-fluid" alt="" style=" height:auto; margin:auto; width:85%; border-radius:inherit;"> 
           </div>
         </div>
       </div>
@@ -164,7 +165,7 @@
               </div>
             </a>
             <div class="container">
-              <div class="case_title"> <em> Chipotle  </em> </div>
+              <div class="case_title">Chipotle </div>
               <p class="case_descrip"> <em> Reimagining Chipotle's online ordering experience </em>
             </div>
           </div>
@@ -188,7 +189,7 @@
               </div>
             </a>
              <div class="container">
-              <div class="case_title"> <em> The Washington Post  </em> </div>
+              <div class="case_title"> The Washington Post </div>
               <p class="case_descrip"> <em> Engaging millennials and the next generation </em>
             </div>
           </div>
@@ -209,7 +210,7 @@
               </div>
             </a>
               <div class="container">
-                <div class="case_title"> <em> Bala Bangles </em> </div>
+                <div class="case_title"> Bala Bangles </div>
                 <p class="case_descrip"> <em> Elevating the product search and discovery experience </em>
               </div>
           </div>
@@ -229,7 +230,7 @@
               </div>
             </a>
             <div class="container">
-              <div class="case_title"> <em> Pomolo </em> </div>
+              <div class="case_title"> Pomolo</div>
               <p class="case_descrip"> <em> Boosting focus and concentration with Pomolo </em>
             </div>
           </div>
