--- a/proj_pomolo.html
+++ b/proj_pomolo.html
@@ -61,15 +61,15 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html" title="Home">  IRENE LUE </a> </h1>
+      <h1 class="logo"><a href="index.html" title="Home">  </a> </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="index.html#portfolio">PROJECTS</a></li>
+          <!-- <li><a href="index.html">HOME</a></li> -->
+          <li><a href="index.html#portfolio">HOME</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
           <li><a href="https://drive.google.com/file/d/1e1YjK2bktUEod1lXxS5KymU3pvoh2KEI/view?usp=sharing" target="_blank">RESUME</a></li>
           <!-- <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li> -->
