--- a/aboutme.html
+++ b/aboutme.html
@@ -273,7 +273,7 @@
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
                 <div class="row" style="margin-top: -52px">
-                  <h1> Some of my favorite things: </h1>
+                  <h1 style="font-family: 'Roboto', sans-serif; font-size:15px; "> Some of my favorite things: </h1>
                   <!-- pic 1 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
