--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </a>
             <div class="container">
               <div class="case_title">Chipotle </div>
-              <p class="case_descrip"> <em> Reimagining Chipotle's online ordering experience </em>
+              <p class="case_descrip"> <em> Reimagining Chipotle's online ordering experience and marketing strategy</em>
             </div>
           </div>
 
@@ -190,7 +190,7 @@
             </a>
              <div class="container">
               <div class="case_title"> The Washington Post </div>
-              <p class="case_descrip"> <em> Engaging millennials and the next generation </em>
+              <p class="case_descrip"> <em> Driving engagement for millennials and the next generation </em>
             </div>
           </div>
 
