--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <h1> HEY THERE! 👋 </h1>
             <!-- HEADER ROTATOR REMOVED STARTING HERE -->
             <h3 style="border:white 1px solid;"> 
-            I'm Irene, a UX designer who loves streamlining task flows and simplifying complex information ecosystems. 
+            I'm Irene, a UX designer who loves simplifying complex information ecosystems and streamlining task flows 
             </h3>
 
             <div class="container" style="margin-left:0px; margin-top:20px;">
