--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </a>
             <div class="container">
               <div class="case_title">Chipotle </div>
-              <p class="case_descrip"> <em> Reimagining Chipotle's online ordering experience and marketing strategy</em>
+              <p class="case_descrip"> <em> Amplifying Chipotle's online ordering experience </em>
             </div>
           </div>
 
