fixed index 34in

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar" class="navbar">
+      <nav id="navbar" class="navbar" style="border:white 1px solid;">
         <ul>
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
           <!-- <li><a href="index.html">HOME</a></li> -->
@@ -111,31 +111,30 @@
   <main id="main">
 
     <!-- ======= Hero Section ======= -->
-    <section id="hero" style="border:white 1px solid; ">
-      <div class="hero-container" style="padding-left:0px; border:white 1px solid; margin-right:0px;">
-        <h1 class="logo"><a href="index.html" title="IRENE LUE">  IRENE LUE </a> </h1>
+    <section id="hero" class=" container d-flex align-items-center justify-content-between" style="border:white 1px solid; width:100%;">
+      <div class="hero-container" style="margin-top:40px; padding-left:0px; border:white 1px solid;">
+        <!-- <h1 class="logo"><a href="index.html" title="IRENE LUE">  IRENE LUE </a> </h1> -->
         <div class="row">
 
       
           <!-- headliner -->
-          <div class="col-lg-6 col-md-6 col-sm-6" style="margin-top:40px; border:white 1px solid;">
-            <h1> HEY THERE! 👋 </h1>
+          <div class="col-lg-6 col-md-6 col-sm-6" style="text-align:center; align-items:center; margin:auto; border:white 1px solid;">
+            <h1 style="border:white 1px solid;"> HEY THERE! 👋 </h1>
             <!-- HEADER ROTATOR REMOVED STARTING HERE -->
             <h3 style="border:white 1px solid;"> 
             I'm Irene, a UX designer who loves simplifying complex information ecosystems and streamlining task flows 
             </h3>
 
-            <div class="container" style="margin-left:0px; margin-top:20px;">
-              <div class="row">
-                <a class="button-box" href="aboutme.html" target="_blank"> Read More </a>
-                <div class="column" style="width:2%;"></div>
-                <a class="button-box" href="https://drive.google.com/file/d/1e1YjK2bktUEod1lXxS5KymU3pvoh2KEI/view?usp=sharing" target="_blank">Resume</a></li>
-              </div>
+            <div class="row" style="border:white 1px solid; margin-top:1vw;">
+              <a class="button-box" href="aboutme.html" target="_blank"> Read More </a>
+              <div class="column" style="width:2%;"></div>
+              <a class="button-box" href="https://drive.google.com/file/d/1e1YjK2bktUEod1lXxS5KymU3pvoh2KEI/view?usp=sharing" target="_blank">Resume</a></li>
             </div>
+
           </div>
 
           <!-- side image -->
-          <div class="image-container" style="border:white 1px solid; border-radius:100%; width:50%; justify-content:left; text-align:left; margin-top:80px; margin-right:0px;">
+          <div class="container" style="border:white 1px solid; border-radius:100%; width:50%; text-align:center; padding-top:30px; align-items:center; margin:auto; ">
             <img id="prof-pic" src="assets/img/insta/waikiki.jpg" class="img-fluid" alt="" style=" height:auto; margin:auto; width:85%; border-radius:inherit;"> 
           </div>
         </div>
@@ -144,7 +143,7 @@
 
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <section id="portfolio" class="portfolio" style="border:white 1px solid;">
       <div class="container" style="width:100%;">
         <br> <br>
         <div class="row portfolio-container">
