--- a/aboutme.html
+++ b/aboutme.html
@@ -275,7 +275,7 @@
                 <div class="row" style="margin-top: -52px">
                   <h1 style="font-family: 'Roboto', sans-serif; font-size:15px; "> Some of my favorite things: </h1>
                   <!-- pic 1 -->
-                  <div class="column" class="img-fluid">
+                  <div class="column" class="img-fluid" style="display:flex;">
                     <div class="image">
                       <img src="assets/img/things/hobbies.jpg" class="img-fluid" alt="" style="border-radius:10px;">             
                       <div class="books-middle"> HOBBIES </div>
