--- a/aboutme.html
+++ b/aboutme.html
@@ -282,8 +282,10 @@
                       <div class="books-list">
                         <ol>
                           <li> Strength-training </li>
-                          <li> Reading & listening to podcasts </li>
-                          <li> Enjoying nature and outdoor activities </li>
+                          <li> Exploring new places </li>
+                          <li> Spending time with friends </li>
+                          <li> Practicing Mandarin </li>
+                          <li> Running by the beach </li>
                         </ol>
                       </div>
                       <div class="image_overlay2">
@@ -317,10 +319,10 @@
                       <img src="assets/img/things/movies.jpg" class="img-fluid" alt="" style="border-radius:10px;">
                       <div class="books-middle"> FILMS </div>
                       <div class="books-list">
-                        <ol>
-                          <li> Harry Potter Series </li>
-                          <li> Pursuit of Happyness </li>
-                          <li> Avatar </li>
+                        <ol> 
+                          <li> Avatar (2009) </li>
+                          <li> Pursuit of Happyness (2006) </li>
+                                 <li> Harry Potter Series (2001-2011) </li>
                         </ol>
                       </div>
                       <div class="image_overlay2">
@@ -343,7 +345,10 @@
                         <ol>
                           <li> The Daily </li>   
                           <li> Hidden Brain </li>  
-                          <li> On Purpose with Jay Shetty </li>                      
+                          <li> The Rooftop Pod </li>
+                          <li> The Mel Robbins Podcast </li>
+                          <li> On Purpose with Jay Shetty </li>  
+
                         </ol>
                       </div>
                       <div class="image_overlay2">
