--- a/aboutme.html
+++ b/aboutme.html
@@ -126,7 +126,7 @@
 
                 <div class ="about-paragraph2">
                   I’m always excited to collaborate with other designers and gain feedback on my work. I'd love to hear from you!
-                  <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>
+                  <em> <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a> </em>
                 </div>
                 
               <!-- <div class ="about-paragraph2">
@@ -196,7 +196,6 @@
                         User Research <br>
                         User Interviews <br>
                         Usability Testing <br>
-                        Literature Review <br>
                         Content Design <br>
                         Information Architecture <br>
                         Rapid Prototyping <br>
@@ -273,7 +272,7 @@
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
                 <div class="row" style="margin-top: -52px">
-                  <h1 style="font-family: 'Roboto', sans-serif; font-size:15px; "> Some of my favorite things: </h1>
+                  <h1 style="font-family: 'Roboto', sans-serif; font-size:15px; color: #6a6a6a; "> Some of my favorite things: </h1>
                   <!-- pic 1 -->
                   <div class="column" class="img-fluid" style="display:flex;">
                     <div class="image">
