--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -268,7 +268,9 @@
 											<!-- assumptions map: part 1-->
 											<div class="row">
 												<div class="col-lg-6">
-													<p style="margin-bottom: 10px; display: inline-block"> We initiated our exploration of potential design directions by creating an assumptions map. It served as a centralized repository for all our assumptions, organized around the following key themes:
+													<p style="margin-bottom: 10px; display: inline-block"> 
+														<!-- We initiated our exploration of potential design directions by creating an assumptions map. It served as a centralized repository for all our assumptions, organized around the following key themes: -->
+														We began exploring design directions by creating an assumtpions map, categorizing our assumptions based on the following key themes: 
 														<ol style="font-size: 14px; font-family: Mukta; line-height:30px; margin-bottom:30px;"> 
 															<li> Identifying the primary <b style="color: #636363;"> pain points </b> experienced by the customer. </li>
 															<li> Understanding the <b style="color: #636363;"> desired end result </b>  the customer aims to achieve. </li>
