--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -164,23 +164,25 @@
 									effortlessly discover the right products and workouts tailored
 									to their skills and fitness goals. -->
 
-									Under UCLA Extension's content strategy course, I was given
+									<!-- Under UCLA Extension's content strategy course, I was given
 									the task of applying content strategy techniques to identify
 									and address issues within a startup's digital platform.
-									<!-- Moving
-									forward with Bala Bangles, I revamped the product listing,
-									product guide, and "Balacize" page, facilitating users'
-									discovery of personalized products and workouts, and refining
-									the readability and navigation flow of its online site.
 
-									I was tasked with the challenge of improving customer satisfaction for a start-up product or service. To address this,  -->
 									I took the initiative to analyze Bala Bangles’ product
 									listing, product guide, and "Balacize" page, and applied
 									content design strategies to optimize its readability and
 									navigation flow. My overarching objective was to facilitate an
 									effortless discovery process for customers, ensuring users
 									find the right products and workouts tailored to their skills
-									and fitness goals.
+									and fitness goals. -->
+
+									Under UCLA Extension's content strategy course, I sought to
+									enhance Bala Bangles' digital platform by optimizing the
+									navigation and readability of their product listing, product
+									guide, and "Balacize" pages. With the intention to streamline
+									the discovery process for customers, my objective was to
+									ensure a seamless search for products and workouts aligned
+									with customers' skills and fitness goals.
 
 									<!-- creating a seamless process for users to explore and discover
 									products. Applying content design strategies, I improved the
