--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -151,7 +151,7 @@
 								</h2>
 
 								<h2 class="subtitle1">
-									CONTENT STRATEGY, INFORMATION ARCHITECTURE, WEB DESIGN
+									CONTENT STRATEGY & INFORMATION ARCHITECTURE
 								</h2>
 
 								<h2 class="subtitle2">
@@ -205,6 +205,20 @@
 								<!-- DETAILS BEGIN -->
 
 								<div class="row" style="width: 100%; margin: 0px 0px 0px 0vw">
+									<!-- type -->
+									<div class="case-details" style="width: 25%">
+										<h2>DELIVERABLE</h2>
+										<div
+											style="
+												border: 1.5px solid #f2cc5c;
+												width: 10%;
+												margin-bottom: 4%;
+												margin-top: 4%;
+											"
+										></div>
+										<p>Fitness Web and Content Redesign</p>
+									</div>
+
 									<!-- duration -->
 									<div class="case-details" style="width: 25%">
 										<h2>TIMELINE</h2>
@@ -236,20 +250,6 @@
 											Information Architecture <br />
 											Prototyping
 										</p>
-									</div>
-
-									<!-- type -->
-									<div class="case-details" style="width: 25%">
-										<h2>DELIVERABLE</h2>
-										<div
-											style="
-												border: 1.5px solid #f2cc5c;
-												width: 10%;
-												margin-bottom: 4%;
-												margin-top: 4%;
-											"
-										></div>
-										<p>Desktop Content Redesign</p>
 									</div>
 
 									<!-- deck -->
