--- a/proj_balabangles.html
+++ b/proj_balabangles.html
@@ -176,13 +176,14 @@
 									find the right products and workouts tailored to their skills
 									and fitness goals. -->
 
-									Under UCLA Extension's content strategy course, I sought to
-									enhance Bala Bangles' digital platform by optimizing the
-									navigation and readability of their product listing, product
-									guide, and "Balacize" pages. With the intention to streamline
-									the discovery process for customers, my objective was to
-									ensure a seamless search for products and workouts aligned
-									with customers' skills and fitness goals.
+									Under UCLA Extension, I enhanced Bala Bangles' digital
+									platform by applying content strategy and information
+									architect techniques to improve the navigation and readability
+									of their product listing, product guide, and "Balacize" pages.
+									With the intention to streamline the discovery process for
+									customers, my objective was to ensure a seamless search for
+									products and workouts aligned with customers' skills and
+									fitness goals.
 
 									<!-- creating a seamless process for users to explore and discover
 									products. Applying content design strategies, I improved the
@@ -216,7 +217,7 @@
 												margin-top: 4%;
 											"
 										></div>
-										<p>Fitness Web and Content Redesign</p>
+										<p>Fitness Website Redesign</p>
 									</div>
 
 									<!-- duration -->
@@ -365,10 +366,8 @@
 											></div>
 
 											<p style="margin-bottom: 30px; display: inline-block">
-												I asked myself a few initial key questions to gather a
-												deeper understanding of Bala Bangles' customer
-												demographic and any opportunities for improvement with
-												its current online experience.
+												Initial key questions to understand Bala Bangles' customer
+												demographic and opportunities for improvement:
 											</p>
 
 											<ol style="margin-bottom: 30px; display: inline-block">
