--- a/proj_chipotle.html
+++ b/proj_chipotle.html
@@ -144,7 +144,7 @@
 							<article class="entry entry-single">
 								<h2 class="title1" style="color:#C81E10;">Chipotle</h2>
 
-								<h2 class="subtitle1"> CONTENT DESIGN & VISUALS </h2>
+								<!-- <h2 class="subtitle1"> CONTENT STRATEGY, INFORMATION ARCHITECTURE, VISUAL DESIGN </h2> -->
 
 								<h2 class="subtitle2">
 									Immerse yourself in our redesigned Chipotle mobile app that combines convenience, personalization, and fun. We bring you a seamless experience for hassle-free group orders, exclusive loyalty rewards, and interactive games that will keep you engaged and excited about your next Chipotle order.
@@ -174,7 +174,7 @@
 										<div style=" border: 1.5px solid #C81E10; width: 10%; margin-bottom: 4%; margin-top: 4%; " ></div>
 										<p> Fast-Food App Redesign</p>
 									</div>
-									
+
 									<!-- duration -->
 									<div class="case-details" style="width: 20%">
 										<h2>TIMELINE</h2>
