--- a/aboutme.html
+++ b/aboutme.html
@@ -281,7 +281,7 @@
                       <div class="books-list">
                         <ol>
                           <li> Strength-training </li>
-                          <li> Exploring new places </li>
+                          <li> Traveling </li>
                           <li> Spending time with friends </li>
                           <li> Practicing Mandarin </li>
                           <li> Running by the beach </li>
