--- a/aboutme.html
+++ b/aboutme.html
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class ="about-paragraph2">
-                  Apart from design, I love strength-training and maintaining an active lifestyle. My favorite pastimes are listening to music, exploring new places, and connecting with people.
+                  Apart from design, I love strength-training and maintaining an active lifestyle. My favorite pastimes include listening to music, exploring new places, and connecting with people.
                 </div>
 
                 <div class ="about-paragraph2">
